--- a/davydov.tex
+++ b/davydov.tex
@@ -110,28 +110,28 @@ Let, $X$ be a set of variables, and $A$ be a conjunct.
 This form of logical formulas is referred to as positively constructed formulas (PCFs), as they are written with only positive type quantifiers. The formulas contain no explicit logic negation sign. Any FOF can be represented as PCF \cite{ICDS2000}.
 %Таким образом ПО--формула есть особый вид записи классических формул языка предикатов, подобно КНФ, ДНФ и др.
 
-PCF that started from $\forall \varnothing$ is called PCF in a {\em canonical form}. Any PCF can be represented in the canonical form. Let $F$ is a $\exists$--PCF, then formula
-$\forall \varnothing\colon F \equiv \text{\textbf{True}} \rightarrow F \equiv F$. If $F$ is a non-canonical $\forall$--PCF, then $\forall \varnothing\colon\{\exists \varnothing\colon F\} \equiv \text{\textbf{True}} \rightarrow \{\text{\textbf{True}}\&F\} \equiv F$. Type quantifiers $\forall \varnothing$ and $\exists \varnothing$ are called {\em fictitious}, since they do not influence on truth value of an original PCF and do not bind any variables.  %а только лишь служат конструкциями сохраняющими корректную запись ПОФ.
+PCF starting from $\forall \varnothing$ is called PCF in a {\em canonical form}. Any PCF can be represented in the canonical form. Let $F$ is a non--canonical $\exists$--PCF, then the canonical PCF
+$\forall \varnothing\colon F \equiv \text{\textbf{True}} \rightarrow F \equiv F$. If a PCF $F$ is a non--canonical $\forall$--PCF, then the canonical PCF $\forall \varnothing\colon\{\exists \varnothing\colon F\} \equiv \text{\textbf{True}} \rightarrow \{\text{\textbf{True}}\&F\} \equiv F$.  Type quantifiers $\forall \varnothing$ and $\exists \varnothing$ are called {\em fictitious}, since they do not influence truth value of an original PCF and do not bind any variables.  Thy are used to regularize PCFs to a canonical ones.
 
 %Для удобства читаемости формул, будем представлять их в древовидной форме следующим образом:
-The PCFs are usually represented as trees for more ease reading, i.e. $Q_XA\colon\{F_1,\ldots,F_n\}$ is equivalent to:
+The PCFs are usually represented as trees for more ease reading, i.e. $Q_XA\colon\{F_1,\ldots,F_n\}$ is represented as
 \begin{center}
 \begin{tikzpicture}
 \tikzset{grow'=right}
 %\tikzset{execute at begin node=\strut}
 \tikzset{level distance=80pt}
 \tikzset{every tree node/.style={align=left,anchor=west}}
-\Tree [. $Q_XA$ $F_1$ $\cdots$ $F_n$ ]
+\Tree [. $Q_XA$ $F_1,$ $\cdots$ $F_n;$ ]
 \end{tikzpicture}
 \end{center}
-\noindent where $Q$ is a quantifier. Tree elements have conventional names: \emph{node}, \emph{root}, \emph{leaf}, \emph{branch}, etc. As the quantifiers $\forall$ correspond to disjunctions of formulas $\{F_1,\ldots,F_n\}$ (quantifiers $\exists$ correspond to a conjunction), then all $\forall$-nodes correspond a {\em disjunctive branching}, and for $\exists$-nodes correspond to {\em conjunctive branching}.
+\noindent where $Q$ is a quantifier. Tree elements have conventional names: \emph{node}, \emph{root}, \emph{leaf}, \emph{branch}, etc. As the quantifiers $\forall$ correspond to disjunctions of formulas $\{F_1,\ldots,F_n\}$ (quantifiers $\exists$ correspond to  conjunctions), then each $\forall$--node is considered to be a {\em disjunctive branching}, and each $\exists$--node is correspond to be a {\em conjunctive branching}.
 
 Some parts of canonical PCF are denoted as follows:
 \begin{enumerate}
 \item PCF root $\forall \varnothing$ is called PCF {\em root}.
 \item Each PCF root child $\exists_XA$ is called PCF {\em base}, conjunct $A$ is called {\em base of facts}, and PCF rooted from base is called {\em base subformula}.
 \item PCF base children $\forall_YB$ are called {\em questions} to its parent base.  If a question is a leaf of a tree then it is called {\em goal question}.
-\item Subtrees of questions are called {\em consequents}.  The absent consequent of a goal question is identical to $\text{\textbf{False}}$.
+\item Subtrees of questions are called {\em consequents}.  If a question has no consequent then the question is referred to as \emph{goal question}, and it is identical to $\text{\textbf{False}}$.
 \end{enumerate}
 
 %как правило
@@ -139,8 +139,9 @@ Some parts of canonical PCF are denoted as follows:
 %----------------------
 
 \begin{example}
-Let us consider a PCF representation of a FOF.
+Let us consider a PCF representation of a FOF
 $$F= \neg\bigl(\forall x\:\exists y P(x,y)\rightarrow \exists z P(z,z)\bigr).$$
+\end{example}
 An image $F'$ of $F$ in the PCF language is $F' = \forall\colon \varnothing\{\exists\colon\varnothing\{\forall x\colon\varnothing\{\exists y\colon P(x,y)\}, \forall z\colon P(z,z)\{\exists\colon\boldsymbol{False}\}\}\}.$
 %А эта ПО-формула в древовидной форме имеет следующий вид+++++++++++++++++++++++++
 The tree--like form of the latter is as follows:
@@ -150,10 +151,9 @@ The tree--like form of the latter is as follows:
 %\tikzset{execute at begin node=\strut}
 \tikzset{level distance=80pt}
 \tikzset{every tree node/.style={align=left,anchor=west}}
-\Tree [. $\forall\colon\varnothing$ [. $\exists\colon\varnothing$ [. $\forall x\colon\varnothing$ $\exists y\colon P(x,y)$ ] [. $\forall z\colon P(z,z)$ $\exists\colon\boldsymbol{False}$ ] ] ]
+\Tree [. $\forall\colon\varnothing$ [. $\exists\colon\varnothing$ [. $\forall x\colon\varnothing$ $\exists y\colon P(x,y),$ ] [. $\forall z\colon P(z,z)$ $\exists\colon\boldsymbol{False}.$ ] ] ]
 \end{tikzpicture}
 \end{center}
-\end{example}
 
 \section{Transformation algorithm}
 
@@ -333,6 +333,11 @@ $$
 A new efficient algorithm for conversion of the predicate calculus language formulas to the language of positively constructed formulas (PCF's) and equivalent rules of reduction of the  PCFs is considered in this paper.  The algorithm preserves the original heuristic structure of knowledge represented by the formulas of the predicate calculus language.
 
 One of the further development of the conversion module is an implementation of the algoritm in a new version of prover, adopted to syntax and properties of TPTP problem set library \cite{tptp}.  Another direction is to adapt the algorithm to the disjunctive language widely used in provers based on the resolution method, as most of the problems of the library are represented in the conjunctive normal forms.  The main problem here is to reconstruct the heuristically structure broken during scolemization and conversion (from first--order language) stages.  We already have a version of the presented algorithm for conjunctive normal form formulas, which have no existential variables.
+
+\section{!ACQ!}
+\label{sec:acq}
+
+
 
 \begin{thebibliography}{9}
 \bibitem{SNV1990} S.N.~Vassilyev \emph{Machine Synthesis of Mathematical Theorems}. The Journal of Logic programming, V.9, No.2--3, pp. 235--266,1990.
