--- a/Mikhailov-en.tex
+++ b/Mikhailov-en.tex
@@ -458,7 +458,7 @@ Algorithms of graph visualization are developed since \nnn{60-ties}~\cite{7}.  T
 
 The paper describes a technique \nnn{and software tools} for analyzing and visualizing the control flow graph of a compiled binaries.  The analysis is based on semantically equivalent transformations of the original graph resulting in a singular abstract node that contains a hierarchy of isolated regions (subgraphs).  The regions are associated with predefined templates to form resulting graphical representation.  The templates \nnn{and additional signature data} for library modules allow one to recognize among the regions the high-level programming language structures and statements, e.g., to construct flow-chart notation of the original program.
 
-\section{Control flow graph visualization}
+\section{A theoretical basis of control flow\\ graph visualization}
 
 An directed graph $G(V,E)$ is a \emph{control flow graph} if the following restrictions hold:
 \begin{enumerate}
@@ -472,15 +472,30 @@ If a control flow graph has more than one terminal node, the terminal nodes are 
 
 We will use additional notions taken from \cite{sese} further in the paper.  A node $x$ is a \emph{dominator} of $y$ ($x\quad dom\quad y$) in a directed graph, if any path from $start$ to $y$ includes $x$.  A node $x$ is a \emph{postdominator} of $y$ ($x\quad pdom\quad y$), if any path from $y$ to $end$ includes $x$.  By convention, a node dominates and postdominates itself.  A node $x$ is an \emph{immediate dominator} of $y$ ($x\quad idom\quad y$), if $x\quad dom\quad y$ and there are no such $p$ that $x\quad dom\quad p$ and $p\quad dom\quad y$.  A node $x$ is an \emph{immediate postdominator} of $y$ ($x\quad pidom\quad y$), if $x\quad pdom\quad y$ and there are no such $p$ that $x\quad pdom\quad p$ and $p\quad pdom\quad y$.
 
-A pair of edges
+Let $a$ and $b$ be a pair of distinct control flow edges.  The ordered pair of $a$ and $b$ will be denoted as $\langle a,b \rangle$.  If 1) $a$ dominates $b$, 2) $b$ postdominates $a$, and c) every cycle containing $a$ also contains $b$ and vice versa, then the pair $\langle a,b \rangle$ is referred to as a \emph{single entry single exit region} (SESE region).  In the SESE region, $a$ is the entry edge and $b$ is the exit edge.
+
+The first condition ensures that every path from $start$ (of the whole graph) into the region passes through the entry edge $a$.  The second condition ensures that every path from inside the region to $end$ passes through the exit edge $b$.  The third condition implements two constraints: every path from inside the region to $a$ point ‘above’ $a$ passes through the exit $b$, and every path from a point ‘below’ $b$ to a point inside the region passes through the entrance $a$, i.e., these path go around the SESE region.
+
+Two SESE regions in a control flow graph must be either folded in each other or do not overlap (contain no common nodes) \cite{sese}.  Structural analysis on the base of recognition of SESE regions commonly used for efficient construction of an intermediate image in a so called \emph{static single assignment} (SSA) form, as well as in data flow analysis.  SESE regions are also organized in \emph{program structure trees} (PST), which represent the control flow graph as folded regions (SESE regions and individual nodes folding tree).  Each of the PST tree nodes denote a procedure consisting of other procedures and individual operators.
+
+A control flow graph subgraph having one entry and one exit nodes is referred to as \emph{two terminal region} (TT region).  TT regions emphasize the points of control flow convergence and the following divergence (Fig.~\ref{fig:TTRegion}).  The requirement condition of TT region recognition are weaker as compared to SESE regions, so all the SESE regions are TT regions but not vice versa.
+\begin{figure}[tb]
+	\centering
+		\includegraphics[width=0.4\textwidth]{Pic/TTRegion.eps}
+	\caption{A two terminal region}
+	\label{fig:TTRegion}
+\end{figure}
+
+For the structural programming language, \nnn{TT region corresponds to a branching operator or a cycle.} Our approach to the control flow graph visualization is based on recognition of TT regions and classification them into finite set of variants concerned with various control flow operators of the original high-level programming language.
 
 \rrr{According to the technique, program's graph of control flow is separated  on regions having one input and one output node, then the regions are replaced with abstract nodes.}
 
 \subsection{Quality criteria of the control flow graph visualization}
+\label{sec:qcrit}
 
 \nnn{A \emph{layout of a graph} on the surface (or in a 3d-space) is a display of the nodes and the edges of the graph on the surface.} A graph can be visualized using various layouts (Fig.~\ref{fig:VisExample}).
 
-\begin{figure}[htbp]
+\begin{figure}[b]
 	\centering
 		\includegraphics[width=0.4\textwidth]{Pic/Pic1.eps}
 	\caption{Various layouts of the same graph}
@@ -490,7 +505,7 @@ A pair of edges
 The main quality criterion of a control graph visualization is the correspondence of the constructed image to the nature of the visualized informational object.  The quality assessment depends on various structural and semantic characteristics of the object.  Three basis feature sets are emphasized specially among the criteria: \emph{visual arrangement}, \emph{aesthetics}, \emph{restrictions}.
 \begin{itemize}
 \item \textbf{Visual arrangement} is the main set of rules that a graph representation must obey to be acceptable as a desired result.  For example, to visualize programs as a flowchart, layout engine must obey agreement rules, which represent all the graph nodes as flowchart symbols and the edges as polylines consisting only with vertical and horizontal sections.  In a general case, an visual arrangement can be sufficiently complex and include a lot of details related to the target image.
-\item \textbf{Aesthetics} is a subset of the criteria that defines attributes of the constructed image, which must be followed as much as possible to improve visibility.  A wide used aesthetic criteria are the following: minimizing a number of edge intersections, minimizing a number of foldings, minimizing the area of placement, maximizing the resolution, minimizing the total edge length, unification of edge lengths, minimizing the number of folds on an edge, foldings unification, maximizing a symmetry of graph representation, minimizing \nnn{the coefficient of sides}. % минимизация коэффициента сторон.
+\item \textbf{Aesthetics} is a subset of the criteria that defines attributes of the constructed image, which must be followed as much as possible to improve visibility.  A widely used aesthetic criteria are the following: minimizing a number of edge intersections, minimizing a number of foldings, minimizing the area of placement, maximizing the resolution, minimizing the total edge length, unification of edge lengths, minimizing the number of folds on an edge, foldings unification, maximizing a symmetry of graph representation, minimizing \nnn{the coefficient of sides}. % минимизация коэффициента сторон.
 \item \textbf{Restrictions} are a subset of the criteria that define layout rules for peculiar elements and subgraphs of the constructed image.  The most common used criteria are \emph{the center} that define whether the root node must be placed at the center of the image, \emph{externality} that define the necessity to place a node outside a region, \emph{cluster} defines that a number of nodes should be placed together near to each other, \emph{sequence} defines the order of nodes placement during drawing paths (left to right, top-bottom).
 \end{itemize}
 
@@ -548,6 +563,8 @@ Structural high-level programming language compilers produce only reducible flow
 The developed algorithm is based on structural analysis technique proposed in~\cite{17} that suggests recognizing subgraph of a predefined form (a template) and replacing them with an abstract node, then edge endpoints reassignation is performed accordingly.  Template application is carried out according to depth-first order until the graph folds into one abstract node.  A tree of dominators (dominating nodes) is constructed.  The tree is used for edge classification and cycle recognition.  The result quality strongly depends on template application order.  The algorithm is as follows:
 
 \begin{algorithm}[h]
+\caption{Algorithm of control flow graph structuring}
+\label{alg:struct}
 \SetAlgoLined %% Connects logical parts with lines
 \KwData{G, D, P}
 \KwResult{An abstract node containing a hierarchy of folded subgraphs}
@@ -567,8 +584,6 @@ The developed algorithm is based on structural analysis technique proposed in~\c
 		}
 	}
 %}
-\caption{Algorithm of control flow graph structuring}
-\label{alg:struct}
 \end{algorithm}
 
 % Построим дерево доминиаторов $D$ и постдоминаторов $P$ для графа $G(E,V)$.
@@ -616,13 +631,9 @@ where \texttt{wDist} is a vertical distance between nodes, \texttt{hDist} is a h
 \section{Implementation}
 \label{sec:implementation}
 
+The algorithm is implemented in the Java programming language.  The main application named ``VisualGraph'' is implemented with authors library ``JGraphX'' containing the subroutines of the algorithm.  The application uses hierarchical graph models for the control flow visualization using authors' and other known popular visualization algorithms.  The ``JGraphX'' library allows one to make images of control flow graphs of nodes and edges, defining shapes and colors for nodes, draw edges between nodes and corner points automatically and manually.
 
-
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
-
-
-
+At present the library and application support some visual arrangement criteria from section \ref{sec:qcrit}.  Categorization of nodes in branching regions of the control flow graph requires that the graph will be attributive and contain assembler code of the main program blocks (liberal parts of code).  The control flow graph itself is obtained from assembler program semantics analysis by means of authors FlexT based utilities \cite{flext}.
 
 % An example of a floating figure using the graphicx package.
 % Note that \label must occur AFTER (or within) \caption.
@@ -741,28 +752,22 @@ Let's consider a result of our algorithm in comparison to one of a hierarchic la
 \section{Further development (CAN BE MERGED WITH Conclusion if small)}
 \label{sec:further-development}
 
-The results of the control flow graph analysis could be used in construction of Model driven engineering (MDE)~\cite{book,eugeneai} software development tools.  The nowadays approaches to MDE is based on change propagation between various models of the software, e.g., source code generation from UML and BPMN2.0, and (in backward direction) refactoring the high-level models according to local source code modification.  Comparing results of control flow graph analysis could determine initial change of the structure of the source code, then the change is propagated to the higher-level models.  This is however a very complex fundamental problem containing both deduction and induction stages.
-
-Another useful application of the described techniques is ....
-
-Finally we need to mention a problem of ... that related to the analysis of control flow graph...
 
 
 \section{Conclusion}
-We have proposed and implemented a software tools realizing a new approach to surface graph layout on the base of techniques of structural analysis.  The tools have been used for structural ... of attributed graphs.  A probation was performed on CPU2000 test set\footnote{https://www.spec.org/cpu2000/ --- Standard Performance Evaluation Corporation.  SPEC CPU2000 is a test set for assessment of the performance of a central processing unit. The test are used for compiler quality evaluation.} and the following \nnn{generalized} results are obtained:
+We have proposed and implemented a software tools realizing a new approach to surface graph layout on the base of techniques of structural analysis.  The tools have been used for structural ... of attributed graphs.  The main difference of our approach as compared to the mentioned (in the paper) techniques is the usage of a set of matching rules, which are applied to two two terminal nodes (a special subgraph) to recognize original control flow structures of high-level programming language.
+
+A probation of the developed algorithms was performed on CPU2000 test set\footnote{https://www.spec.org/cpu2000/ --- Standard Performance Evaluation Corporation.  SPEC CPU2000 is a test set for assessment of the performance of a central processing unit. The test are used for compiler quality evaluation.}.  The following results are obtained:
 \begin{itemize}
 \item 197.parser (Syntactic parser of a natural language);
 \item 252.eon (Ray tracing).
 \end{itemize}
 
-
-
-
 The automation of the flow control analysis allows an engineer to devote more efforts for description of the templates increasing both the personal productivity and detail level of the software description.
 
+The results of the control flow graph analysis could be used in construction of Model driven engineering (MDE)~\cite{book,eugeneai} software development tools.  The nowadays approaches to MDE is based on change propagation between various models of the software, e.g., source code generation from UML and BPMN2.0, and (in backward direction) refactoring the high-level models according to local source code modification.  Comparing results of control flow graph analysis could determine initial change of the structure of the source code, then the change is propagated to the higher-level models.  This is however a very complex fundamental problem containing both deduction and induction stages.
 
 % conference papers do not normally have an appendix
-
 
 % use section* for acknowledgment
 \section*{Acknowledgment}
@@ -836,6 +841,7 @@ The authors would like to thank...}
 \bibitem{3} R.~Johnson,D.~Pearson, and K.~Pingali, \emph{Finding regions fast: Single entry single exit and control regions in linear time}. Tech. rep., Cornell University, Ithaca, NY, 1993
 
 \bibitem{sese} SESE.pdf
+\bibitem{flext} FLEXT.pdf
 %\bibitem{IEEEhowto:kopka}
 %H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
 %  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
