Added Matrosov in the title of the institute.

--- a/Mikhailov-en.tex
+++ b/Mikhailov-en.tex
@@ -383,7 +383,7 @@
 % use a multiple column layout for up to three different
 % affiliations
 \author{\IEEEauthorblockN{Andrey Mikhailov${}^{*}$, Aleksey Hmelnov${}^{*}$, Evgeny Cherkashin${}^{*\;**}$ and Igor Bychkov${}^{*}$}
-\IEEEauthorblockA{${}^{*}$Institute of System Dynamics and Control Theory at Siberian Branch of Russian Academy of Sciences, \\
+\IEEEauthorblockA{${}^{*}$Matrosov Institute for System Dynamics and Control Theory of Siberian Branch of Russian Academy of Sciences, \\
 ${}^{**}$National Research Irkutsk State Technical University,\\
 Irkutsk, Russian Federation\\
 \texttt{\{mikhailov,alex,eugeneai,bychkov\}@icc.ru}}
@@ -772,15 +772,7 @@ The results of the control flow graph analysis could be used in construction of 
 % use section* for acknowledgment
 \section*{Acknowledgment}
 
-\nnn{The results presented in the paper are obtained with partial support of...
-The authors would like to thank...}
-
-
-
-
-
-
-
+\nnn{The results presented in the paper are obtained with partial support of Russian Foundation of Fundamental Research, grant No 16-07-00411, ``Technologies Development for Dynamic Planning of Service Compositions Execution in a Cloud Environment''.}
 
 % trigger a \newpage just before the given reference
 % number - used to balance the columns on the last page
