--- a/Mikhailov-en.tex
+++ b/Mikhailov-en.tex
@@ -750,11 +750,6 @@ Let's consider a result of our algorithm in comparison to one of hierarchic layo
 \end{figure}
 
 
-\section{Further development (CAN BE MERGED WITH Conclusion if small)}
-\label{sec:further-development}
-
-
-
 \section{Conclusion}
 We have proposed and implemented a software tools realizing an approach to surface graph layout on the base of techniques of structural analysis.  The main difference of our approach as compared to the mentioned (in the paper) techniques is the usage of a set of matching rules, which are applied to two two terminal nodes (a special subgraph) to recognize original control flow structures of high-level programming language.
 
@@ -773,7 +768,7 @@ The results of the control flow graph analysis could be used in construction of 
 % use section* for acknowledgment
 \section*{Acknowledgment}
 
-The results presented in the paper are obtained with partial support of Russian Foundation of Fundamental Research, grant No 16-07-00411, ``Technologies Development for Dynamic Planning of Service Compositions Execution in a Cloud Environment''.
+The development partially support by Russian Foundation of Fundamental Research, grant No 16-07-00411, ``Technologies Development for Dynamic Planning of Service Compositions Execution in a Cloud Environment''.
 
 % trigger a \newpage just before the given reference
 % number - used to balance the columns on the last page
